# kmagnet

./: AUTHORS  CMakeLists.txt  COPYING  ChangeLog  README  TODO  debian.changelog  debian.control  debian.rules  kmagnet.dsc  kmagnet.kdev4  kmagnet.spec  kmagnetgenerator.sh
data/: CMakeLists.txt  puzzle1.kmp  puzzle2.kmp  puzzle3.kmp
doc/: CMakeLists.txt  index.docbook
images/: CMakeLists.txt
po/: CMakeLists.txt  kMagnet.pot
po/ca/: CMakeLists.txt  kMagnet.po
po/cs/: CMakeLists.txt  kMagnet.po
src/: CMakeLists.txt  Messages.sh  common.h  kMagnet.knsrc  kMagnetui.rc  kmagnet.cpp  kmagnet.desktop  kmagnet.h  kmagnet.kcfg  kmagnetcell.cpp  kmagnetcell.h  kmagnetgenerator.cpp  kmagnetgenerator.h  kmagnetrenderer.cpp  kmagnetrenderer.h  kmagnetscene.cpp  kmagnetscene.h  kmagnetsolver.cpp  kmagnetsolver.h  kmagnetui.rc  kmagnetview.cpp  kmagnetview.h  kmagnetview_base.ui  main.cpp  prefs_base.ui  rc.cpp  settings.kcfgc
themes/: CMakeLists.txt  README  brown.desktop  default.desktop  green.desktop  kmagnet_oxygen.svgz  kmagnet_oxygen_brown.svgz  kmines_green.svgz  kmines_oxygen_brown.svgz
